--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,7 @@
-astroid==1.3.8
 blockchain==1.1.2
-docopt==0.4.0
-future==0.14.3
-httplib2==0.9
-logilab-common==1.1.0
-mailchimp==2.0.9
-oauthlib==0.7.2
-pep8==1.6.2
-Pillow==2.7.0
-pycrypto==2.6.1
-pylint==1.4.4
-pytz==2015.2
-PyYAML==3.11
-requests==2.6.0
-requests-oauthlib==0.4.2
-simplejson==3.6.5
-six==1.10.0
-uservoice==0.0.20
-virtualenv==12.0.5
+Flask==0.10.1
+gunicorn==19.3.0
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+Werkzeug==0.10.4
