--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 blockchain==1.1.2
 Flask==0.10.1
+Flask-Cors==2.1.0
 gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+six==1.10.0
 Werkzeug==0.10.4
